# KNRscore

./: .gitignore  CITATION.cff  Examples_old.rst  LICENSE  MANIFEST.in  README.md  make_clean.sh  make_new_build.sh  pyproject.toml  requirements.txt  scatterd.py  setup.cfg  setup.py  setup.py.old  test.py
.github/: FUNDING.yml
.github/workflows/: docs.yml  pytest.yml
KNRscore/: KNRscore.py  __init__.py  examples.py
KNRscore/tests/: test_KNRscore.py
docs/figs/: example.pptx
docs/pages/doctrees/: Background.doctree  Coding quality.doctree  Documentation.doctree  Examples.doctree  Installation.doctree  KNRscore.KNRscore.doctree  Tutorials.doctree  environment.pickle  flameplot.flameplot.doctree  index.doctree  sponsor.doctree
docs/pages/html/: .buildinfo  Background.html  Coding quality.html  Documentation.html  Examples.html  Installation.html  KNRscore.KNRscore.html  Tutorials.html  flameplot.flameplot.html  genindex.html  index.html  objects.inv  py-modindex.html  search.html  searchindex.js  sponsor.html
docs/pages/html/_sources/: Background.rst.txt  Coding quality.rst.txt  Documentation.rst.txt  Examples.rst.txt  Installation.rst.txt  KNRscore.KNRscore.rst.txt  Tutorials.rst.txt  flameplot.flameplot.rst.txt  index.rst.txt
docs/pages/html/_static/: documentation_options.js
docs/source/: Background.rst  Coding quality.rst  Documentation.rst  Examples.rst  Installation.rst  Tutorials.rst  conf.py  flameplot.flameplot.rst  index.rst
flameplot/: __init__.py  colormap.py  examples.py  flameplot.py  scatter.py  scatterd.py
