[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "KNRscore"
dynamic = ["version"]
authors = [{ name = "Erdogan Taskesen", email = "erdogant@gmail.com" },]
description = "KNRScore is a Python package for computing K-Nearest-Rank Similarity, a metric that quantifies local structural similarity between two maps or embeddings."
readme = "README.md"
requires-python = ">=3"
keywords = ["Python", "tsne", "UMAP", "comparison", "statistical test", "embedding similarity", "embedding comparison"]
license = "MIT"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    "Intended Audience :: Education",
    "Intended Audience :: Science/Research",
    "Operating System :: Unix",
    "Operating System :: Microsoft :: Windows",
    "Operating System :: MacOS",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = ['matplotlib','numpy','tqdm','scipy','imagesc','scatterd','requests']

[project.urls]
Homepage = "https://erdogant.github.io/KNRscore"
Download = "https://github.com/erdogant/KNRscore/archive/{version}.tar.gz"

[tool.setuptools]
packages = ["KNRscore"]
include-package-data = true

[tool.setuptools.dynamic]
version = { attr = "KNRscore.__version__" }
